# ucii-mission-control

./: .gitignore  pyproject.toml
api/: main.py
api/models/: __init__.py  event.py  visitor.py
api/routes/: __init__.py  events.py  query.py  sessions.py  visitors.py
api/schemas/: __init__.py  event.py
api/services/session_intelligence/: activity.py  classification.py  conversion.py  health.py  intent.py  journey.py  outcome.py  reliability.py  significance.py  timeline.py
api/services/visitor_intelligence/: profile.py  segmentation.py
console/: main.py  main.py.phase-5.1.2-before-final-intelligence  main.py.phase-5.1.2-before-intelligence  main.py.phase-5.1.2-before-route-fix  main.py.phase-5.1.3-before-operator-view  main.py.phase-5.1.4-before-summary-layer
console/static/: style.css  style.css.phase-5.1.2-before-final-intelligence  style.css.phase-5.1.2-before-intelligence  style.css.phase-5.1.3-before-operator-view  style.css.phase-5.1.4-before-summary-layer
console/templates/: base.html  base.html.phase-5.1.2-before-final-intelligence  base.html.phase-5.1.2-before-intelligence  base.html.phase-5.1.3-before-operator-view  base.html.phase-5.1.4-before-summary-layer
docs/: architecture.md  event-schema.md
storage/: database.py
tests/: test_database.py  test_event_collection.py  test_event_schema.py  test_tracker_structure.py  tracker_test.html
tracker/: ucii-tracker.js
