[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "ucii-mission-control"
version = "0.1.0"
description = "Operational observability infrastructure for UCII"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.139,<1.0",
    "uvicorn>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28"
]


[tool.setuptools.packages.find]
include = [
    "api*",
    "storage*",
    "shared*"
]
